# noiseprocesses

./: .bitbucket-pipelines.yaml  .bumpversion.cfg  .bumpversion.toml  .copier-answers.yml  .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES  app.py  bitbucket-pipelines.yml  diagram.md  docker-compose-build.yaml  docker-compose-dev.yaml  docker-compose.yaml  environment.yaml  environment.yml  java_setup.sh  pyproject.toml
charts/noise-modelling-api/: Chart.yaml  values.yaml
charts/noise-modelling-api/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa-api.yaml  hpa-worker.yaml  kso-worker.yaml  service-api.yaml  serviceaccount.yaml  vpa-worker.yaml
charts/noise-modelling-api/templates/tests/: test-connection.yaml
docs/: _config.yml
docs/content/: index.md
docs/content/about/: project_description.md
examples/: 2-jdatabase_example.py  3-road-emission_example.py  4-import-dem.py  5-create-grid.py  6-propagation.py  7-model-conversion.py  8-road-noise.py  9-create-building-grids.py  buildings-request-body.json  buildings-user.geojson  buildings.geojson  dem_bbox-user.geojson  dgm1_32_556_9270_1_hh_2022.tif  example-request-body.json  jnius_example.py  roads-user.geojson  roads-user.json  roads.geojson  run_example.py
schemas/: NoiseModelling-schema-v0.1.json  buildings-schema.json  dem-bbox-schema.json  grounds-schema.json  roads-schema.json
src/noiseprocesses/: __init__.py  config.py  protocols.py
src/noiseprocesses/calculation/: building_immissions.py  emission.py  noise.py  propagation.py  protocols.py  road.py  road_building_immissions.py  road_emission.py  road_noise.py  road_propagation.py
src/noiseprocesses/core/: database.py  java_bridge.py
src/noiseprocesses/models/: building_properties.py  dem_feature.py  emission_config.py  grid_config.py  ground_absorption.py  immissions_buildings_config.py  internal.py  isosurface_config.py  noise_calculation_config.py  output.py  propagation_config.py  propagation_input.py  roads_properties.py  traffic_flow.py  user_input.py
src/noiseprocesses/utils/: buildings_grids.py  contouring.py  dem.py  grids.py  line_to_points.py  raster.py  srid.py
