[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "noiseprocesses"
description = "A python wrapper for NoiseModelling"
authors = [{name = "Stefan Schuhart", email = "stefan.schuhart@gv.hamburg.de"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Analytics",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "fastprocesses @ git+https://github.com/StefanSchuhart/fastProcesses#v0.4.0",
    "cython (>=3.0.12,<4.0.0)",
    "jaydebeapi (>=1.2.3,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "jpype1 (>=1.5.2,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "geojson-pydantic (>=1.2.0,<2.0.0)"
]

[project.urls]
Homepage = "https://bitbucket.org/geowerkstatt-hamburg/noiseProcesses"
Documentation = "https://bitbucket.org/geowerkstatt-hamburg/noiseProcesses"
Changelog = "https://bitbucket.org/geowerkstatt-hamburg/noiseProcesses/src/main/CHANGELOG.md"
Repository = "https://bitbucket.org/geowerkstatt-hamburg/noiseProcesses"


[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
# same as isort, black
line-length = 88
# Assume Python 3.8
target-version = "py310"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.poetry]
name = "noiseprocesses"
version = "0.1.0"
description = "A python wrapper for NoiseModelling"
authors = ["Stefan Schuhart <stefan.schuhart@gv.hamburg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
# formatting, quality, tests
autoflake = ">=1.4"
black = ">=23.7"
isort = ">=5.7.0"
mypy = ">=0.812"
pytest = ">=6.2.2"
pytest-cov = ">=2.11.1"
pytest-randomly = ">=3.5.0"
pytest-sugar = ">=0.9.4,<1"
pytest-xdist = ">=2.2.0,<3"
types-toml = ">=0.10.1,<1"
pre-commit = ">=3.4.0,<4"
packaging = "^24.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
jupyter-book = "^0.15"
sphinx-autoapi = "^2"
sphinxcontrib-autoyaml = "^1.1"

[tool.black]
line-length = 88
exclude = "tests/fixtures"

[tool.isort]
profile = "black"
line_length = 88
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "noiseprocesses"
include_trailing_comma = true
